# datamaestro_text

./: .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  CLAUDE.md  MANIFEST.in  Makefile  README.md  cliff.toml  mkdocs.yml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  tox.ini
.circleci/: config.yml
.github/workflows/: pytest.yml  python-package.yml  python-publish.yml
datamaestro_text/: __init__.py
datamaestro_text/config/ai/: quac.yaml
datamaestro_text/config/ai/einstein/: wiki-103.yaml
datamaestro_text/config/com/: imdb.yaml  oscar-corpus.py  sentiment140.py  sentiment140.yaml
datamaestro_text/config/com/facebook/: babi.yaml
datamaestro_text/config/com/fastml/: goodbooks-10k.yaml
datamaestro_text/config/com/github/soskek/: bookcorpus.yaml
datamaestro_text/config/com/microsoft/: wikiqa.yaml
datamaestro_text/config/com/microsoft/msmarco/: passage.py
datamaestro_text/config/com/smashwords/: bookcorpus.py
datamaestro_text/config/edu/cornell/: nlvr.yaml
datamaestro_text/config/edu/standford/: __init__.py  aclimdb.yaml  glove.py  glove.yaml  im2p.yaml
datamaestro_text/config/edu/stanford/: __init__.py  aclimdb.py  glove.py  im2p.yaml
datamaestro_text/config/edu/upenn/ldc/: __init__.py  aquaint.py  aquaint.yaml
datamaestro_text/config/gov/nist/ir/: covid.py
datamaestro_text/config/gov/nist/trec/: adhoc.py  adhoc.yaml  clueweb.yaml  deeplearning.yaml  tipster.py  tipster.yaml  web.yaml
datamaestro_text/config/io/github/rajpurkar/: squad.yaml
datamaestro_text/config/io/github/thunlp/: fewrel.py
datamaestro_text/config/io/metamind/research/: __init__.py  wikitext-103.yaml  wikitext-2.yaml  wikitext.py
datamaestro_text/config/me/zhuhao/: fewrel.yaml
datamaestro_text/config/net/mattmahoney/: enwiki.yaml
datamaestro_text/config/net/windows/: msmarco.py
datamaestro_text/config/org/acm/recsys/: cb2014.yaml
datamaestro_text/config/org/cocodataset/: index.yaml
datamaestro_text/config/org/grouplens/: movielens.py  movielens20m.yaml
datamaestro_text/config/org/pytorch/: surnames.yaml
datamaestro_text/config/org/universaldependencies/: french.py
datamaestro_text/config/org/universaldependencies/french/: gsd.yaml  partut.yaml
datamaestro_text/config/org/visualqa/: balanced.yaml
datamaestro_text/config/uk/ac/ucl/cs/: qangaroo.yaml
datamaestro_text/data/: embeddings.py  ir.py  language.py  recommendation.py  tagging.py  text.py  trec.py
datamaestro_text/data/ir/: __init__.py  cord19.py  csv.py  trec.py
datamaestro_text/dataset/: trec.py
datamaestro_text/download/: tmdb.py
datamaestro_text/files/: tagging.py
datamaestro_text/handlers/dataset/: recommendation.py
datamaestro_text/handlers/download/: tmdb.py
datamaestro_text/handlers/files/: tagging.py
datamaestro_text/interfaces/: trec.py
datamaestro_text/test/: test_datasets.py
datamaestro_text/transforms/: ir.py
datamaestro_text/utils/: randomstream.py  shuffle.py
datasets_text/: __init__.py
docs/: api.md  index.md  requirements.txt
docs/source/: conf.py  getting_started.rst  index.rst
docs/source/api/: conversation.rst  debate.rst  embeddings.rst  index.rst  ir.rst  nlp.rst  recommendation.rst  text.rst
docs/source/datasets/: conversation.rst  embeddings.rst  index.rst  ir.rst  irds.rst  recommendation.rst  text.rst
src/datamaestro_text/: __init__.py
src/datamaestro_text/config/ai/: quac.yaml
src/datamaestro_text/config/com/: oscar-corpus.py  sentiment140.py
src/datamaestro_text/config/com/facebook/: babi.yaml
src/datamaestro_text/config/com/fastml/: goodbooks-10k.yaml
src/datamaestro_text/config/com/github/: ikat.py
src/datamaestro_text/config/com/github/aagohary/: canard.py
src/datamaestro_text/config/com/github/apple/: ml-qrecc.py
src/datamaestro_text/config/com/github/prdwb/: orconvqa.py
src/datamaestro_text/config/com/github/soskek/: bookcorpus.yaml
src/datamaestro_text/config/com/microsoft/: wikiqa.yaml
src/datamaestro_text/config/com/microsoft/msmarco/: passage.py
src/datamaestro_text/config/com/smashwords/: bookcorpus.py
src/datamaestro_text/config/edu/cornell/: nlvr.yaml
src/datamaestro_text/config/edu/stanford/: aclimdb.py  glove.py
src/datamaestro_text/config/edu/upenn/ldc/: aquaint.py
src/datamaestro_text/config/fr/: granddebat.py
src/datamaestro_text/config/gov/nist/ir/: covid.py
src/datamaestro_text/config/gov/nist/trec/: adhoc.py  clueweb.yaml  tipster.py
src/datamaestro_text/config/io/github/rajpurkar/: squad.yaml
src/datamaestro_text/config/io/github/thunlp/: fewrel.py
src/datamaestro_text/config/io/metamind/research/: wikitext.py
src/datamaestro_text/config/net/mattmahoney/: enwiki.yaml
src/datamaestro_text/config/org/acm/recsys/: cb2014.yaml
src/datamaestro_text/config/org/grouplens/: movielens.py
src/datamaestro_text/config/org/universaldependencies/: french.py
src/datamaestro_text/data/: conversation.py  embeddings.py  recommendation.py  tagging.py  text.py
src/datamaestro_text/data/conversation/: __init__.py  base.py  canard.py  ikat.py  orconvqa.py  qrecc.py
src/datamaestro_text/data/debate/: __init__.py  granddebat.py
src/datamaestro_text/data/ir/: __init__.py  base.py  cord19.py  csv.py  formats.py  huggingface.py  stores.py  trec.py  utils.py
src/datamaestro_text/datasets/: __init__.py
src/datamaestro_text/datasets/irds/: data.py  datasets.py  helpers.py  utils.py
src/datamaestro_text/download/: tmdb.py
src/datamaestro_text/interfaces/: plaintext.py  trec.py
src/datamaestro_text/test/: test_documented.py
src/datamaestro_text/transforms/: ir.py
src/datamaestro_text/transforms/ir/: __init__.py
src/datamaestro_text/utils/: __init__.py  files.py  iter.py  shuffle.py
