[project]
name = "datamaestro-text"
requires-python = ">=3.10"
keywords = ["dataset manager", "information retrieval", "experiments"]
description = "Datamaestro module for text-related datasets"
dynamic = ["version", "readme", "dependencies"]
license = {text = "GPL-3"}
authors = [
    { name = "Benjamin Piwowarski",  email = "benjamin@piwowarski.fr" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
readme = {file = ["README.md"], content-type = "text/markdown"}

[project.urls]
homepage = "https://github.com/experimaestro/datamaestro_text"
documentation = "https://datamaestro-text.readthedocs.io/en/latest/"
repository = "https://github.com/experimaestro/datamaestro_text"


[project.optional-dependencies]
dev = [
    "pytest",
    "docutils",
    "sphobjinv",
    "flake8",
    "sphinx"
]

[tool.setuptools_scm]
write_to = "src/datamaestro_text/version.py"
fallback_version = "0.0.0-dev"

[build-system]
requires = ["setuptools", "setuptools-scm", "wheel"]  # PEP 508 specifications.

[dependency-groups]
dev = [
    "docutils>=0.21.2",
    "pytest>=8.4.1",
    "sphinx>=8.1.3",
    "sphobjinv>=2.3.1.3",
]

[project.entry-points."datamaestro.repositories"]
text = "datamaestro_text:Repository"
irds = "datamaestro_text.datasets.irds:Repository"
