[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "datamaestro-text"
authors = [
    {name = "Benjamin Piwowarski", email = "benjamin@piwowarski.fr"}
]
description = "Datamaestro module for text-related datasets"
readme = "README.md"
license = {text = "GPL-3.0-or-later"}
keywords = ["dataset manager", "information retrieval", "experiments"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.10"
dynamic = ["version"]
dependencies = [
    "datamaestro>=1.5.0",
    "ir_datasets>=0.5.8",
    "attrs",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "docutils",
    "sphobjinv",
    "flake8",
    "sphinx"
]

[project.urls]
Homepage = "https://github.com/experimaestro/datamaestro_text"
Documentation = "https://datamaestro-text.readthedocs.io/en/latest/"
Repository = "https://github.com/experimaestro/datamaestro_text"
"Bug Tracker" = "https://github.com/experimaestro/datamaestro_text/issues"

[project.entry-points."datamaestro.repositories"]
text = "datamaestro_text:Repository"
irds = "datamaestro_text.datasets.irds:Repository"

[tool.hatch.version]
source = "vcs"

[tool.hatch.version.raw-options]
local_scheme = "no-local-version"

[tool.hatch.build.hooks.vcs]
version-file = "src/datamaestro_text/version.py"

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/README.md",
    "/LICENSE",
    "/pyproject.toml",
]

[tool.hatch.build.targets.wheel]
packages = ["src/datamaestro_text"]

[tool.pytest.ini_options]
junit_family = "xunit2"
testpaths = ["src/datamaestro_text"]
norecursedirs = ["node_modules"]

[dependency-groups]
dev = [
    "docutils>=0.21.2",
    "flake8>=7.3.0",
    "pytest>=8.4.1",
    "sphinx>=8.1.3",
    "sphobjinv>=2.3.1.3",
]
