
[metadata]
name = datamaestro_text
author = Benjamin Piwowarski
author-email = benjamin@piwowarski.fr
home-page = https://github.com/experimaestro/datamaestro_text
description = "Text related datasets"
long-description = file: README.md, CHANGELOG.md
long-description-content-type = text/markdown
license = GPL-3
license_file = LICENSE
platform = any
keywords = dataset manager
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Topic :: Software Development :: Libraries :: Python Modules


[options.entry_points]
datamaestro.repositories =
    text = datamaestro_text:Repository

[options]

zip_safe = true
include_package_data = true
python_requires = >= 3.8
test_suite = datamaestro.test
setup_requires =
    setuptools >= 65.0.0
    setuptools_scm
    wheel
[options.extras_require]
test =
    tox

[mypy]
python_version = 3.7
warn_unused_ignores = True

[flake8]
doctests = True
exclude =  .git, .eggs, __pycache__, tests/, docs/, build/, dist/
max-line-length = 88
# See https://github.com/PyCQA/pycodestyle/issues/373
extend-ignore = E203
